# dune-gdt

./: .clang-format  .clang-format-3.8  .clang-tidy  .cmake_format.py  .drone.yml  .gitignore  .gitmodules  .gitsuper  .mailmap  .pre-commit-config.yaml  .pylicense-cpp.cfg  .pylicense-cpp.py  .pylicense-other.cfg  .pylicense-other.py  .travis.add_swap.bash  .travis.after_script.bash  .travis.cfg.in  .travis.ctest  .travis.make_env_file.py  .travis.run_tests.bash  .travis.script.bash  .travis.test_python.bash  .travis.yml  .travis.yml.py  CMakeLists.txt  CMakeLists.txt.felix  CTestConfig.cmake  LICENSE  Makefile.am  README  README.md  _config.yml  config.h.cmake  configure.ac  dune-detailed-discretizations.pc.in  dune-fem-functionals.pc.in  dune-gdt.pc.in  dune.module  say_hello.cc  stamp-vc
cmake/modules/: CMakeLists.txt  DuneGdtMacros.cmake
doc/: CMakeLists.txt  Makefile.am
doc/doxygen/: CMakeLists.txt  Doxylocal  Doxystyle  Makefile.am
doc/latex/: .gitignore  Makefile  dune-fem-functionals.bbl  dune-fem-functionals.bib  dune-fem-functionals.dvi  dune-fem-functionals.kilepr  dune-fem-functionals.out  dune-fem-functionals.ps  dune-fem-functionals.tex  dune-functionals.tex
dune/: CMakeLists.txt  Makefile.am
dune/detailed-discretizations/: Makefile.am
dune/fem/: Makefile.am  fem_functionals.hh
dune/functionals/: Makefile.am
dune/gdt/: CMakeLists.txt  Makefile.am  assembler.bindings.cc  bindings.cc  bindings.hh  discretefunction.bindings.cc  discretefunction.pbh  exceptions.hh  exists.hh  interpolations.hh  norms.hh  print.hh  products.hh  projections.bindings.cc  projections.bindings.hh  projections.hh  prolongations.bindings.cc  prolongations.bindings.hh  prolongations.hh  spaces.bindings.cc  spaces.bindings.hh  spaces.hh  spaces.pbh  type_traits.hh  usercode.bindings.cc
examples/: CMakeLists.txt  Makefile.am  activepolargels.ini  adaptive-interpolation.cc  adaptive_elliptic_swipdg.cc  adaptive_interpolation.cc  boltzmann-bindings.cc  boltzmann.cc  boltzmann.hh  cellmodel-bindings.cc  cellmodel.cc  cellmodel.hh  cellmodel_restricted_op.cc  cellmodel_test_solvers.cc  coordinate-transformed-mn-bindings.cc  coordinate-transformed-mn.hh  coordinatetransformedmn_restricted_op.cc  coordinatetransformedmntest.cc  drosophila_cells.cc  elliptic_lrbms_fom.cc  gamm-2019-talk-on-conservative-rb-OS2015-academic-example.py  gamm-2019-talk-on-conservative-rb-OS2015-multiscale-example.py  gamm-2019-talk-on-conservative-rb.py  gamm-2019-talk-on-conservative-rb_spe10.py  gamm_2019_talk_on_conservative_rb_OS2015_academic_example.py  gamm_2019_talk_on_conservative_rb_OS2015_multiscale_example.py  gamm_2019_talk_on_conservative_rb_base.py  momentapproximation_1dfullmoments.cc  momentapproximation_1dhatfunctions.cc  momentapproximation_1dpartialmoments.cc  momentapproximation_3dfullmoments.cc  momentapproximation_3dhatfunctions.cc  momentapproximation_3dpartialmoments.cc  momentmodels_1d_hfmn.cc  momentmodels_1d_hfpn.cc  momentmodels_1d_mn.cc  momentmodels_1d_pmmn.cc  momentmodels_1d_pmpn.cc  momentmodels_1d_pn.cc  momentmodels_3d_hfmn.cc  (+9 more)
examples/basefunctionset/: CMakeLists.txt  Makefile.am
examples/elliptic/: .gitignore  CMakeLists.txt  (+12 more)
m4/: CMakeLists.txt  Makefile.am  dune-detailed-discretizations.m4  dune-fem-functionals.m4  dune-gdt.m4
poisson_new/: .gitignore  Makefile  Makefile.am  Makefile.in  README  algorithm.hh  constraints.hh  dirichletconstraints.hh  estimator.hh  laplaceoperator.hh  main.cc  mainadaptive.cc  mainconstraints.cc  neumannconstraints.hh  problemdata.hh
python/: .gitignore  .style.yapf  CMakeLists.txt  dunegdtusercode.cc  pytest.ini  setup.cfg  setup.py  setup.py.in  version.sh.in
src/: Makefile.am  dune_fem_functionals.cc
test/: CMakeLists.txt  elliptic-cg-discretization.hh  elliptic-cg-discretizations.cc  elliptic-estimators.cc  elliptic-sipdg-discretization.cc  elliptic-sipdg-discretization.hh  elliptic-swipdg-discretization.cc  elliptic-swipdg-discretization.hh  elliptic-testcases.hh  empty.cc  grids.hh  hyperbolic-fv-discretization.hh  hyperbolic-fv-discretization_yaspgrid.cc  hyperbolic-testcases.hh  linearelliptic-cg-discretization.hh  linearelliptic-cg-discretization_fem_eigen_alugrid.cc  linearelliptic-cg-discretization_fem_eigen_sgrid.cc  linearelliptic-cg-discretization_fem_eigen_yaspgrid.cc  linearelliptic-cg-discretization_fem_istl_alugrid.cc  linearelliptic-cg-discretization_fem_istl_sgrid.cc  linearelliptic-cg-discretization_fem_istl_yaspgrid.cc  linearelliptic-cg-discretization_pdelab_eigen_alugrid.cc  linearelliptic-cg-discretization_pdelab_eigen_sgrid.cc  linearelliptic-cg-discretization_pdelab_eigen_yaspgrid.cc  linearelliptic-cg-discretization_pdelab_istl_alugrid.cc  linearelliptic-cg-discretization_pdelab_istl_sgrid.cc  linearelliptic-cg-discretization_pdelab_istl_yaspgrid.cc  linearelliptic-testcases.hh  operator_oswald.cc  operator_reconstructions.cc  operators_darcy.cc  operators_darcy.hh  operators_elliptic.cc  operators_elliptic_localizable_product.cc  operators_elliptic_matrix_operator.cc  operators_elliptic_operator.cc  operators_elliptic_swipdg.cc  operators_l2_local_projection_localizable_operator_dg_fem.cc  operators_l2_local_projection_localizable_operator_dg_pdelab.cc  operators_l2_local_projection_localizable_operator_fv_default.cc  (+82 more)
tests/: CMakeLists.txt  Makefile.am  elliptic-cg-discretization.hh  elliptic-cg-discretizations.cc  elliptic-discretizations.cc  elliptic-estimators.cc  elliptic-sipdg-discretization.hh  elliptic-swipdg-discretization.cc  elliptic-swipdg-discretization.hh  elliptic-testcases.hh  operator_oswald.cc  operator_reconstructions.cc  operators.cc  operators_products.cc  operators_products.hh  operators_products_assemblable.cc  operators_products_localizable.cc  operators_products_projection.cc  operators_products_prolong.cc  operators_products_prolong_alu2d.cc  operators_products_prolong_alu3d.cc  spaces.cc  spaces.hh  spaces_cg.cc  spaces_cg.hh  spaces_cg_fem.cc  spaces_cg_fem_alu.cc  spaces_cg_pdelab.cc  spaces_cg_pdelab_alu.cc  spaces_dg.cc  spaces_finitevolume.cc  stuff-la-solver.cc
(+2199 files in other folders)
