# This file is part of the dune-gdt project:
#   http://users.dune-project.org/projects/dune-gdt
# Copyright holders: Felix Schindler
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

SUBDIRS = doxygen
CURDIR = doc
BASEDIR = ..

# add list of html files to generate from wml
PAGES=

docdir=$(datadir)/doc/dune-gdt

include $(top_srcdir)/am/webstuff
include $(top_srcdir)/am/global-rules
