# This file is part of the dune-gdt project:
#   http://users.dune-project.org/projects/dune-gdt
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

M4FILES = dune-gdt.m4

aclocaldir = $(datadir)/aclocal
aclocal_DATA = $(M4FILES)

EXTRA_DIST = $(M4FILES)

include $(top_srcdir)/am/global-rules
