# ~~~
# This file is part of the dune-gdt project:
#   https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt
# Copyright 2010-2021 dune-gdt developers and contributors. All rights reserved.
# License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
#      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
#          with "runtime exception" (http://www.dune-project.org/license.html)
# Authors:
#   Rene Fritze (2019)
# ~~~

[aliases]
test = pytest

[pep8]
max-line-length = 120
ignore = E221,E226,E241,E242, W0105, N803, N806
# E221 multiple spaces before operator
# E226 missing whitespace around arithmetic operator  [ignored by default]
# E241 multiple spaces after ':'                      [ignored by default]
# E242 tab after `,'                                  [ignored by default]
# W0105 String statement has no effect (we use triple qoted strings as documentation in some files)
# N803 argument name should be lowercase (we use single capital letters everywhere for vectorarrays)
# N806 same for variables in function
# F401 imported but not used, we have a ton of those which we don't want to ignore individually


[flake8]
max-line-length = 120
ignore = E221,E226,E241,E242, W0105, N803, N806
per-file-ignores =
  python/dune/gdt/basic.py:F401
  examples/gamm_2019*.py:F405,F401,F403,E402

[tool:pytest]
testpaths = test/
python_files = test/*.py
python_class = Test
pep8maxlinelength = 120
pep8ignore = E221,E226,E241,E242
addopts= -p no:warnings

[metadata]
# this is mandatory to lave license end up in .whl
license_file = LICENSE.txt
